# -professional-python-exercises-1-weatherAPI

./: .gitignore  README.md  Taskfile.yml  WeatherDataFetcher.py  pyproject.toml  requirements.txt  test_weather_data_fetcher.py  weather_data_fetcher.py
.github/workflows/: python-linting.yml
